@@ -1,3 +1,8 @@
+2007-06-02  Yevgen Muntyan  <muntyan@tamu.edu>
+
+	* gtksourceview/regex/glib/gregex.c: newest patched gregex.c, fixes
+	here-doc highlighting in shell files.
+
 2007-05-30  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	* gtksourceview/regex/glib/gregex.c,
